--- a/roles/ceph-common/tasks/installs/prerequisite_rhcs_cdn_install_debian.yml
+++ b/roles/ceph-common/tasks/installs/prerequisite_rhcs_cdn_install_debian.yml
@@ -13,5 +13,5 @@
   with_items:
     - { repo: "MON", configure: (mon_group_name in group_names) }
     - { repo: "OSD", configure: (osd_group_name in group_names) }
-    - { repo: "Tools", configure: (rgw_group_name in group_names or mds_group_name in group_names) }
+    - { repo: "Tools", configure: (rgw_group_name in group_names or mds_group_name in group_names or mgr_group_name in group_names) }
   when: item.configure
